[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/Retro Gaming.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu/buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu/buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="PlayerScoreLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="OpponentScoreLabel" type="Label" parent="."]
margin_left = 968.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "00"
align = 1
valign = 1

[node name="TimerLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -172.0
margin_right = 348.0
margin_bottom = -92.0
rect_min_size = Vector2( 700, 80 )
custom_colors/font_color_shadow = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
margin_left = 120.0
margin_top = 224.0
margin_right = 904.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1
alignment = 1

[node name="PlayAgain" type="Label" parent="Buttons"]
margin_top = 49.0
margin_right = 784.0
margin_bottom = 109.0
rect_min_size = Vector2( 360, 60 )
custom_colors/font_color_shadow = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "PLAY AGAIN?"
align = 1

[node name="NewGameButton" parent="Buttons" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 110.0
margin_right = 784.0
margin_bottom = 170.0

[node name="ExitButton" parent="Buttons" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 171.0
margin_right = 784.0
margin_bottom = 231.0

[connection signal="mouse_entered" from="Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_exited"]
[connection signal="pressed" from="Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="mouse_entered" from="Buttons/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/ExitButton" to="." method="_on_ExitButton_mouse_exited"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
